--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Modificar.cshtml
@@ -258,9 +258,17 @@ function GetListBancoPorSucursal() {
                 <i class="icon fa fa-warning"></i> @ViewBag.mensaje
             </h4>
         </div>
-
     }
 
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
     <div class="modal fade" id="PlantillaModal" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
