--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Modificar.cshtml
@@ -52,7 +52,16 @@
                 <i class="icon fa fa-warning"></i> @ViewBag.mensaje
             </h4>
         </div>
+    }
 
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
     }
 
     <div class="row">
